k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: basalam-product-manager
  labels:
    name: basalam-product-manager
