k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basalam-app-service
  namespace: basalam-product-manager
  labels:
    app: basalam-app
spec:
  selector:
    app: basalam-app
  ports:
  - name: frontend
    port: 3000
    targetPort: 3000
  - name: backend
    port: 3001
    targetPort: 3001
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: basalam-product-manager
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
